# vici

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  ViciBuildSetup.cmake  build.cm  build.py  cmake_templates.py  doxy  readme.md  setup.bat  setup.sh
CLI/: CMakeLists.txt  main.cpp
CLI/HeaderTool/: CMakeLists.txt
CLI/HeaderTool/Source/: main.cpp
Editor/: CMakeLists.txt
Editor/Core/Include/: Editor.h  GameView.h  Panel.h  SceneView.h
Editor/Core/Source/: Editor.cpp  GameView.cpp  Main.cpp  MainWindow.cpp  Panel.cpp  SceneView.cpp
Editor/ViciEditor/: Editor.h  GameView.h  MainWindow.h  Panel.h  SceneView.h  ViciEditorAPI.h
Editor/ViciEditor/Source/: Editor.cpp  GameView.cpp  Main.cpp  MainWindow.cpp  Panel.cpp  SceneView.cpp
Editor/ViciEditorLauncher/: CMakeLists.txt  Main.cpp
Engine/Core/: CMakeLists.txt  CoreAPI.h  EngineIncludes.h  build.cm
Engine/Core/Collections/: Dictionary.h  Pool.h  Queue.h  SharedPointer.h  Stack.h
Engine/Core/Engine/: Delegate.h  Engine.h  EngineMacros.h  Hash.h
Engine/Core/Engine/Source/: Engine.cpp  Hash.cpp
Engine/Core/Graphics/: Material.h  MeshData.h  MeshRenderer.h  PrimitiveShapes.h
Engine/Core/Graphics/Source/: Material.cpp  MeshData.cpp  MeshRenderer.cpp  PrimitiveShapes.cpp
Engine/Core/Include/: Array.h  Asset.h  AssetFactory.h  AssetLoader.h  Buffer.h  ComponentFactory.h  ComponentTree.h  ConditionVar.h  CoreAPI.h  CoreIncludes.h  CoreTypes.h  Delegate.h  Dictionary.h  Display.h  DynamicPool.h  EComponentCallback.h  Engine.h  EngineConstants.h  EngineIncludes.h  EngineMacros.h  Environment.h  FilePath.h  GameObject.h  GameObjectTree.h  Glew.h  Hash.h  IComponent.h  IDrawable.h  IService.h  IndexBuffer.h  Input.h  InputDef.h  InputTypes.h  LayerSystem.h  LinkedList.h  Material.h  MaterialParam.h  Mesh.h  MeshData.h  MeshRenderer.h  (+40 more)
Engine/Core/Include/Collections/: Array.h  Dictionary.h  DynamicPool.h  LinkedList.h  Queue.h  Stack.h  String.h
Engine/Core/Include/Reflection/: Class.h  ClassManager.h  ClassTypeConstructor.h  Object.h  Property.h  Type.h
Engine/Core/Include/Rendering/: Camera.h  Display.h  (+9 more)
Engine/Core/Serialization/: Serialization.h
Engine/Core/Source/: Asset.cpp  AssetFactory.cpp  AssetLoader.cpp  Buffer.cpp  ComponentFactory.cpp  ComponentTree.cpp  Delegate.cpp  Engine.cpp  Environment.cpp  FilePath.cpp  GameObject.cpp  GameObjectTree.cpp  Hash.cpp  IComponent.cpp  IDrawable.cpp  IndexBuffer.cpp  Input.cpp  InputDef.cpp  LayerSystem.cpp  Logger.cpp  Material.cpp  MaterialParam.cpp  Mesh.cpp  MeshData.cpp  MeshRenderer.cpp  ObjImporter.cpp  Object.cpp  PrimitiveShape.cpp  PrimitiveShapes.cpp  Project.cpp  Renderer.cpp  SceneLoader.cpp  Shader.cpp  Test.cpp  TestComponent.cpp  TextFile.cpp  Texture.cpp  Texture2D.cpp  Time.cpp  Transform.cpp  (+9 more)
Engine/Core/Tests/: ArrayTests.cpp  DictionaryTests.cpp  LinkedListTests.cpp  QueueTests.cpp  ReflectionTests.cpp  SharedPtrTests.cpp  StackTests.cpp  TMPTests.cpp  TSharedPtrTests.cpp  VStringTests.cpp  WeakPtrTests.cpp
Engine/Core/Util/: ObjImporter.h
Engine/Engine/: CMakeLists.txt
Engine/Engine/Include/: Engine.h  EngineAPI.h
Engine/Engine/Source/: Engine.cpp
Engine/PIL/: CMakeLists.txt  New Text Document.txt  PILAPI.h  readme.md
Engine/PIL/Collections/: Array.h  Dictionary.h  DynamicPool.h  LinkedList.h  Pool.h  Queue.h  Stack.h  StaticPool.h
Engine/PIL/DataTypes/: PlatformTypes.h
Engine/PIL/FileSystem/: FilePath.h  TextFile.h
Engine/PIL/Graphics/: Buffer.h  GraphicsConstants.h  GraphicsTypes.h  IndexBuffer.h  Material.h  MaterialParam.h  MeshData.h  MeshRenderer.h  PrimitiveShapes.h  Renderer.h  Shader.h  Texture.h  Texture2D.h  VertexArrayList.h  VertexBuffer.h  readme.md
Engine/PIL/Platform/: Environment.h  Input.h  InputTypes.h  KeyCode.h  Window.h
Engine/PIL/Threads/: ConditionVariable.h  Mutex.h  Thread.h
Engine/PIL/Timer/: Time.h  Timer.h
Engine/Platform/: CMakeLists.txt  SDL2.cmake
Engine/Platform/Include/: IPlatformService.h  PlatformAPI.h  Window.h
Engine/Platform/Source/: Window.cpp
Engine/Platform/Tests/: VWindowTests.cpp
Engine/Test/: CMakeLists.txt  GTest.cmake
Engine/Test/Source/: main.cpp
Engine/Tests/: CMakeLists.txt  Classes.h  Macros.h  Main.cpp
ExampleProject/: CMakeLists.txt
ExampleProject/Assets/Scenes/: scene1.xml
ExampleProject/Code/: ExampleProjectAPI.h
ExampleProject/Code/Module/: Module.cpp  Module.h
ExampleProject/Settings/: window.xml
RunTests/: CMakeLists.txt
Templates/Mac/: CMakeLists.txt
Templates/Mac/src/: main.cpp
Templates/Windows/: CMakeLists.txt
Templates/Windows/src/: TestProj.cpp  TestProj.h  main.cpp
mac/: CMakeLists.txt
mac/src/: Display.cpp  Input.cpp  Platform_Mac.cpp
src/: CMakeLists.txt
src/assets/: Asset.cpp  Asset.h  AssetFactory.cpp  AssetFactory.h  AssetLoader.cpp  AssetLoader.h  AssetTypes.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  SQScriptAsset.cpp  ShaderAsset.cpp  ShaderAsset.h  TextureAsset.cpp
src/core/: ComponentFactory.cpp  ComponentFactory.h  Components.h  Delegate.cpp  Delegate.h  GameObject.cpp  GameObject.h  IComponent.cpp  IComponent.h  IDrawable.cpp  IDrawable.h  LayerSystem.cpp  LayerSystem.h  Object.cpp  Object.h  Project.cpp  SceneLoader.cpp  SceneLoader.h  ScriptableComponent.cpp  Singleton.h  Transform.cpp  Transform.h  VHash.cpp  VHash.h  VSquirrel.cpp  VTime.cpp  VTime.h  Vici.cpp  Vici.h  core.h
src/datastructures/: ComponentTree.h  GameObjectTree.cpp  GameObjectTree.h  Stack.h  TList.h  TListIter.cpp  TListIter.h  TStack.h  TTree.h
src/debugging/: Logger.cpp
src/mac/: Display.cpp  Platform_Mac.cpp  Thread.cpp
src/rendering/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  MatrixStack.cpp  MatrixStack.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/util/: TextFile.cpp  TextFile.h  Xml.h  XmlDocument.cpp  XmlNode.cpp
src/windows/: Display.cpp  Platform_Win32.cpp  Thread.cpp
win32/: CMakeLists.txt
win32/src/: Display.cpp  Input.cpp  Platform_Win32.cpp
(+369 files in other folders)
